se agrega libreria para calendario en las entradas de fecha , y se realiza modificacion al impplemento de modificacion, colocando las opciones en laos campos de entrada para evitar ingreso de datos erroneos

--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@ h1 {
     font-size: 28px;
     color: #ffffff;
 }
-
+h4 {
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
 /* Estilos para los enlaces botón */
 a.button {
     display: inline-block;
